--- a/Style/style.css
+++ b/Style/style.css
@@ -325,10 +325,17 @@ h3{
     flex-wrap: wrap;
     flex-basis: 100%;   
     flex:1;
-    ;
+    height: 70vh;
+    
 }
     .col2 h4{
         margin-top: 20px;
+    }
+    .col2 h2{
+        /* margin-bottom: 200px; */
+    }
+    .col2 p {
+        margin-bottom: 50%;
     }
     .flex-columns .col2 {
         width: fit-content;
@@ -336,13 +343,15 @@ h3{
     }
     .flex-columns .col1{
         margin-left: 50px;
-        max-width: 100%;
+        max-width: 80%;
+        /* height: 100vh; */
 
     }
    
 .flex-columns .col .col1,
 .flex-columns .col .col2 {
     height: 100%;
+    /* align-items: center; */
 
 }
 
@@ -354,7 +363,7 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 30px;
 }
 
@@ -365,6 +374,7 @@ h3{
     .flex-columns .col{
         flex:100%;
         max-width: 100%;
+        height: 100%;
     }
     .nav ol{
         display: none;
@@ -374,6 +384,15 @@ h3{
     }
     .flex-columns .col2{
         margin-left: 0.5%;
+        
+        /* justify-content: block; */
+    }
+    .flex-columns .col2 p{
+        margin-bottom: none;
+        margin-bottom: 20px;
+    }
+    .flex-columns .col1{
+        height: 50vh;
     }
 }
 
